--- a/drawingApp/app/src/main/res/layout/activity_main.xml
+++ b/drawingApp/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/image"
+            tools:src="@drawable/image"
             />
 
         <com.example.drawingapp.DrawingView
@@ -184,6 +184,15 @@
             android:layout_margin="5dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_brush"
+            />
+
+        <ImageButton
+            android:id="@+id/ib_save"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_save"
             />
     </LinearLayout>
 
