--- a/SevenMinWorkout/app/src/main/res/layout/activity_main.xml
+++ b/SevenMinWorkout/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,41 @@
          android:textSize="@dimen/default_text_size_buttons"
          android:textStyle="bold"
          />
-
-
  </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/flBMI"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flStart"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/item_circular_color_accent_background"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BMI"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/default_text_size_buttons"
+            android:textStyle="bold"
+            />
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculator"
+        android:layout_gravity="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/default_text_size_buttons"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flBMI"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
