--- a/SevenMinWorkout/app/src/main/res/layout/activity_main.xml
+++ b/SevenMinWorkout/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:id="@+id/flBMI"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/flHistry"
         app:layout_constraintTop_toBottomOf="@+id/flStart"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -62,6 +62,7 @@
     </FrameLayout>
 
     <TextView
+        android:id="@+id/tvBMI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculator"
@@ -69,10 +70,46 @@
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/default_text_size_buttons"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/flBMI"
+        app:layout_constraintEnd_toEndOf="@id/flBMI"
         app:layout_constraintTop_toBottomOf="@+id/flBMI"
         />
 
+
+    <FrameLayout
+        android:id="@+id/flHistry"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/flBMI"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flStart"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/item_circular_color_accent_background"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/default_text_size_buttons"
+            android:textStyle="bold"
+            android:src="@drawable/ic_calendar"
+            android:layout_margin="10dp"
+            />
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/tvHistry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Histry"
+        android:layout_gravity="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/default_text_size_buttons"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/flHistry"
+        app:layout_constraintEnd_toEndOf="@id/flHistry"
+        app:layout_constraintTop_toBottomOf="@id/flHistry"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
